--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         </p>
 
         <div class="tic w-[90%] max-w-[20rem] rounded-[1rem] border-[rgba(255,255,255,0.25)] bg-[#ffffff26] p-[2rem] absolute top-[30%] left-[50%] translate-x-[-50%] grid grid-cols-3 aspect-square">
-            <div class="box relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-b-2 border-solid"></div>
-            <div class="box relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-b-2 border-solid"></div>
-            <div class="box relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-b-2 border-solid"></div>
-            <div class="box relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-b-2 border-solid"></div>
-            <div class="box relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-b-2 border-solid"></div>
-            <div class="box relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-b-2 border-solid"></div>
-            <div class="box relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-solid"></div>
-            <div class="box relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-solid"></div>
-            <div class="box relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center "></div>
+            <div class="box box1 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-b-2 border-solid"></div>
+            <div class="box box2 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-b-2 border-solid"></div>
+            <div class="box box3 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-b-2 border-solid"></div>
+            <div class="box box4 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-b-2 border-solid"></div>
+            <div class="box box5 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-b-2 border-solid"></div>
+            <div class="box box6 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-b-2 border-solid"></div>
+            <div class="box box7 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-solid"></div>
+            <div class="box box8 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center border-r-2 border-solid"></div>
+            <div class="box box9 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center "></div>
         </div>
 
-        <button class="btn text-white bg-[#ffffff26] rounded-[1rem] px-[3rem] py-[0.5rem] border-[1px] border-[rgba(255,255,255,0.25)] absolute left-[50%] translate-x-[-50%] bottom-[3rem] invisible">
+        <button class="btn text-white bg-[#ffffff26] rounded-[1rem] px-[3rem] py-[0.5rem] border-[1px] border-[rgba(255,255,255,0.25)] absolute left-[50%] translate-x-[-50%] bottom-[3rem]">
             New game
         </button>
     </div>
