--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-hidden">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,9 +28,13 @@
             <div class="box box9 relative w-full aspect-square cursor-pointer text-[3rem] text-white flex justify-center items-center "></div>
         </div>
 
-        <button class="btn text-white bg-[#ffffff26] rounded-[1rem] px-[3rem] py-[0.5rem] border-[1px] border-[rgba(255,255,255,0.25)] absolute left-[50%] translate-x-[-50%] bottom-[3rem]">
+        <button class="btn text-white bg-[#ffffff26] rounded-[1rem] px-[3rem] py-[0.5rem] border-[1px] border-[rgba(255,255,255,0.25)] absolute left-[50%] translate-x-[-50%] bottom-[10rem]">
             New game
         </button>
+
+        <div> 
+            <p class="text-white absolute top-[96%] left-[50%] translate-x-[-50%] bg-[#ffffff26] rounded-[1rem] px-[1rem] py-[4px] border-[1px] border-[rgba(255,255,255,0.25)]">Built By Milan :D</p>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
