--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="output.css">
-    <link rel="icon" type="image/x-icon" href="/images/2959388.jpg">
+    <link rel="icon" type="image/x-icon" href="images/2959388.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap');
     </style>
 </head>
-<body class="box-border m-0 p-0 font-[Poppins] min-h-screen grid bg-[url('/images/gradient-bg.jpg')] h-screen bg-cover bg-center">
+<body class="box-border m-0 p-0 font-[Poppins] min-h-screen grid bg-[url('images/gradient-bg.jpg')] h-screen bg-cover bg-center">
     <div class="wrapper w-full place-items-center">
         <p class="game-info absolute top-[3rem] left-[50%] translate-x-[-50%] bg-[#ffffff26] rounded-[1rem] px-[3rem] py-[0.5rem] text-white  border-[1px] border-[rgba(255,255,255,0.25)]">
             
